# unitorch-microsoft

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  azure-pipelines.yml  ecosystem.config.js  es-metadata.yml  package.json  pyproject.toml  requirements.txt  setup.py
apps/spaces/: AI_RULES.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
apps/spaces/src/: App.tsx  index.css
apps/spaces/src/components/: Layout.tsx
apps/spaces/src/pages/: Demos.tsx  Docs.tsx  Home.tsx  Models.tsx  Picasso.tsx
apps/studio/: AI_RULES.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
apps/studio/src/: App.tsx  index.css
apps/studio/src/components/: Sidebar.tsx
apps/studio/src/lib/: api.ts
apps/studio/src/store/: useStore.ts
apps/studios/: package-lock.json  package.json  vite.config.ts
apps/studios/src/: App.tsx
apps/studios/src/components/: Sidebar.tsx
apps/studios/src/lib/: api.ts
apps/studios/src/store/: useStore.ts
dockers/: Dockerfile
docs/: README.md
examples/: README.md
notebooks/: README.md
skills/: SKILL.md
skills/apps/: spaces.md  studios.md
src/unitorch_microsoft/: __init__.py  azure.py
src/unitorch_microsoft/adinsights/: qwen_vl.py  webui.ini  webui.py
src/unitorch_microsoft/adinsights/configs/: qwen_vl.1.ini  qwen_vl.2.ini  qwen_vl.ini
src/unitorch_microsoft/adinsights/generation/: bloom.v2.ini  mistral_ds.quant.7b.peft.ini  modeling_tulr_v6.py
src/unitorch_microsoft/adinsights/labels/: parse_label.py  video_label.ini  vishelper.py
src/unitorch_microsoft/adinsights/sensitive_images/: clip.ini  minigpt4.ini  minigpt4.quant.13b.ini  minigpt4.quant.ini  minigpt4_ds.ini  minigpt4_ds.quant.13b.ini  minigpt4_ds.quant.ini  preprocess_dataset.py
src/unitorch_microsoft/adinsights/video/: __init__.py  bletchley.v1.retrieval.ini  ckpt_upload.py  clip.retrieval.ini  clip.video.retrieval.ini  kmeans.py  lora_rapper.py  modeling_clip.py  video.shutterstock.quality.neg.ini  video_utils.py  videodata_movement.py  wan.py  wan_diffsynthStudio.py  wan_diffusors.py  wan_official.py  wan_official_2.py  wan_videoxfun.py
src/unitorch_microsoft/adsplus/: __init__.py  stable_flux.py
src/unitorch_microsoft/adsplus/click/: modeling_bert.py
src/unitorch_microsoft/adsplus/configs/: bletchley.v1.lora.0.3B.ini  bletchley.v1.lora.ini  bletchley.v3.lora.0.8B.ini  bletchley.v3.lora.ini
src/unitorch_microsoft/adsplus/image/: bletchley.v1.click.ini  bletchley.v1.ini  bletchley.v3.quality.flux.ini  bletchley_v1.py  bletchley_v1_click.py  llava_mistral_bletchley_v3.ini  llava_mistral_bletchley_v3.lora.ini
src/unitorch_microsoft/adsplus/mps/: config.ini  config_pair.ini  mps_model.py  process.py
src/unitorch_microsoft/adsplus/relevance/: __init__.py
src/unitorch_microsoft/adsplus/slab/: autonlp.ini  bart.ini  bert.v1.ini  bert.v2.1.ini  bert.v2.2.ini  bletchley.v1.click.3tower.ini  bletchley.v1.click.ini  bletchley_v1_click.py  clickbert.ini  modeling_bert.py  tribert.v8.ini  tulr.v6.1.ini  tulr.v6.3.ini  xpegasus.ini
src/unitorch_microsoft/aether/: README.md  __init__.py  dv3.py  gpt4o.py  gpt4o_v.py  gptv.py  metrics.py  msttr.py  pandas.py  parser.py  sql.py
src/unitorch_microsoft/aether/chatgpt/: dv3.ini  gpt4o.ini  gpt4o_v.ini  gptv.ini  parser.ini
src/unitorch_microsoft/aether/configs/: metrics.ini  pandas.ini  sql.ini
src/unitorch_microsoft/agents/: designer_ui.py  manus_cli.py  manus_ui.py  marketer_ui.py  marketer_ui_v2.py  requirements.txt  unitorch.py
src/unitorch_microsoft/agents/components/: __init__.py
src/unitorch_microsoft/agents/flows/: poster.py
src/unitorch_microsoft/agents/tools/: auto.py  do.py  manus.py  manus_cli.py
src/unitorch_microsoft/agents/utils/: __init__.py  (+3 more)
src/unitorch_microsoft/apps/: AGENTS.md  README.md  __init__.py  fastapis.ini
src/unitorch_microsoft/chatgpt/: __init__.py  azure.py  dv3.py  gpt4o.py  gpt4o_v.py  gptv.py  papyrus.py  parser.py  recraft.py
src/unitorch_microsoft/china/: __init__.py  webui.ini  webui.py
src/unitorch_microsoft/console/: eval.py  infer.py  launch.py  script.py  service.py  train.py
src/unitorch_microsoft/consoles/: eval.py  fastapi.py  infer.py  launch.py  service.py  train.py  webui.py
src/unitorch_microsoft/fastapis/: README.md  __init__.py  all.ini  collector.py
src/unitorch_microsoft/interrogators/: __init__.py  bletchley.py  classifier.py  clip.py
src/unitorch_microsoft/models/: __init__.py  classification_utils.py  image_utils.py  label_utils.py  processing_utils.py
src/unitorch_microsoft/modules/: __init__.py  beam_search_v2.py  pipeline_flux_fill.py
src/unitorch_microsoft/msan/: __init__.py
src/unitorch_microsoft/omnigpt/: __init__.py  processing.py
src/unitorch_microsoft/omnilora/: bletchley_interrogator.py  clip_interrogator.py
src/unitorch_microsoft/omnipixel/: README.md  __init__.py  clip_interrogator.py  fastapis.ini  flux_prompts.json  modeling_click.py  processing.py  stable_flux.py
src/unitorch_microsoft/pa/: __init__.py  bletchley_v1.py  bletchley_v3.py
src/unitorch_microsoft/picasso/: README.md  bad_crop.py  basnet.py  clip_zero.py  detr.py  flux_op.py  labeling.py  ocr.py  turingmm.py  webui.ini
src/unitorch_microsoft/score/: __init__.py
src/unitorch_microsoft/scores/: __init__.py
src/unitorch_microsoft/scripts/: README.md  chatgpt.py
src/unitorch_microsoft/services/: __init__.py  mirror_file.ini  mirror_folder.ini  zip_saver.ini
src/unitorch_microsoft/spaces/: __init__.py  app.py  config.ini  config.local.ini  fastapis.ini  requirements.txt
src/unitorch_microsoft/tools/: __init__.py  az_sync.py  azure.py  files.py  gpu.py  hfhub.py  manus.py  model_soups.py
src/unitorch_microsoft/utils/: __init__.py  azure.py  recraft.py
src/unitorch_microsoft/vpr/: __init__.py  bert.py  bletchley_v1.py  bletchley_v3.py  blip2.py  convert_visualbert_v2_to_onnx.ipynb  convert_visualbert_v2_to_onnx.py  diffusion.py  processing.py  visualbert.py  visualbert_v2.py
src/unitorch_microsoft/webui/: all.ini
src/unitorch_microsoft/webuis/: README.md  __init__.py  all.ini  chatgpt.py  tools.ini
(+1114 files in other folders)
