[build-system]
requires = ["setuptools>=40.0", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "unitorch_microsoft"
authors = [
    {name = "decu", email = "decu@microsoft.com"},
]
description = "unitorch_microsoft provide more STOA models from Ads & Microsoft for unitorch."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["PyTorch"]
license = {text = "MIT"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
deepspeed = ["deepspeed>=0.11.0"]
diffusers = ["diffusers>=0.29.0", "torchsde>=0.2.6"]
quantization = ["bitsandbytes>=0.41.1"]
docs = ["mkdocstrings[python]>=0.18", "mkdocs-material", "markdown-exec", "mkdocs-gen-files", "mkdocs-coverage"]
others = ["gradio>=4.40.0", "fastapi>=0.103.1", "onnxruntime", "faiss-cpu"]
azure = ["azure-storage-blob"]
all = ["unitorch_microsoft[deepspeed,diffusers,quantization,others,azure]"]

[project.scripts]
unitorch-train = "unitorch_microsoft.consoles.train:cli_main"
unitorch-eval = "unitorch_microsoft.consoles.eval:cli_main"
unitorch-infer = "unitorch_microsoft.consoles.infer:cli_main"
unitorch-launch= "unitorch_microsoft.consoles.launch:cli_main"
unitorch-webui= "unitorch_microsoft.consoles.webui:cli_main"
unitorch-fastapi= "unitorch_microsoft.consoles.fastapi:cli_main"
unitorch-service = "unitorch_microsoft.consoles.service:cli_main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "unitorch_microsoft.VERSION"}
dependencies = {file = "requirements.txt"}
