[build-system]
requires = ["setuptools>=40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unitorch_microsoft"
authors = [
    {name = "decu", email = "decu@microsoft.com"},
]
description = "unitorch_microsoft provide more STOA models from Ads & Microsoft for unitorch."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["PyTorch"]
license = {text = "MIT"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
deepspeed = ["unitorch[deepspeed]"]
diffusers = ["unitorch[diffusers]"]
detection = ["unitorch[detection]"]
megatron = ["unitorch[megatron]"]
docs = ["unitorch[docs]"]
copilots = [
    "frontmatter",
    "playwright",
    "beautifulsoup4",
    "browser_use<=0.5.11",
    "googlesearch-python",
    "tenacity",
  ]
others = [
    "unitorch[others]",
    "azure-storage-blob", 
    "google-genai",
    "diffusers>=0.35.0",
    "fastapi>=0.112.2",  
    "uvicorn>=0.30.6",
  ]
all = ["unitorch_microsoft[deepspeed,diffusers,detection,megatron,docs,copilots,others]"]

[project.scripts]
unitorch-train = "unitorch_microsoft.consoles.train:cli_main"
unitorch-eval = "unitorch_microsoft.consoles.eval:cli_main"
unitorch-infer = "unitorch_microsoft.consoles.infer:cli_main"
unitorch-launch= "unitorch_microsoft.consoles.launch:cli_main"
unitorch-fastapi= "unitorch_microsoft.consoles.fastapi:cli_main"
unitorch-service = "unitorch_microsoft.consoles.service:cli_main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "unitorch_microsoft.VERSION"}
dependencies = {file = "requirements.txt"}
